# nn-parallel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  cvmat_pool.cpp  cvmat_pool.h  cvmat_pool_gtest.h  dropout_nn_parallel_gtest.cpp  dropout_nn_parallel_gtest.h  idx_cv.cpp  idx_cv.h  idx_cv_gtest.h  layer.h  layer_gtest.h  log.cpp  log.h  main.cpp  minibatch_trainer.cpp  minibatch_trainer.h  minibatch_trainer_gtest.h  neural_network.cpp  neural_network.h  neural_network_gtest.h  nn_parallel_gtest.cpp  nn_parallel_gtest.h  omp_lock.h  rand_bound.h  rand_bound_gtest.h  static_assert.h  timer.h  type_utils.h
